AdminPage almost ready

--- a/html-feladatok-bemutatkozo/index.html
+++ b/html-feladatok-bemutatkozo/index.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Home</title>
 </head>
 
 <body>
     <header>
-        <img class="header" src="/images/HP-Banner.png" alt="JULIA DONALDSON">
+        <img class="header" src="./images/HP-Banner.png" alt="JULIA DONALDSON">
     </header>
     
     <nav>
@@ -38,8 +38,8 @@
 
         <section style="margin-top: 50px;">
             <div>
-                <img class="image" src="/images/andFriends.jpg" alt="Julia Donaldson and Friends">
-                <img class="image" src="/images/JD_photo.jpg" alt="Julia Donaldson">
+                <img class="image" src="./images/andFriends.jpg" alt="Julia Donaldson and Friends">
+                <img class="image" src="./images/JD_photo.jpg" alt="Julia Donaldson">
             </div>
         </section>
 
