--- a/html-feladatok-bemutatkozo/works.html
+++ b/html-feladatok-bemutatkozo/works.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>Works</title>
 </head>
 
 <body>
     <header >
-        <img class="header" src="/images/HP-Banner.png" alt="JULIA DONALDSON">
+        <img class="header" src="./images/HP-Banner.png" alt="JULIA DONALDSON">
     </header>
     
     <nav>
@@ -34,7 +34,7 @@
     <main>
         <section>
             <div class="project">
-                <img src="/images/Gallery/JD_Graffalo_hun.jpg" alt="A Graffaló">
+                <img src="./images/Gallery/JD_Graffalo_hun.jpg" alt="A Graffaló">
                 <div class="desc">
                     <h3>A Graffaló</h3>
                     <p>
@@ -53,7 +53,7 @@
            
         <section>
               <div class="project">
-                <img src="/images/Gallery/JD_KvirtekEsKvartok.jpg" alt="Kvirtek és Kvartok">
+                <img src="./images/Gallery/JD_KvirtekEsKvartok.jpg" alt="Kvirtek és Kvartok">
                 <div class="desc">
                     <h3>Kvirtek és Kvartok</h3>
                     <p>
@@ -70,7 +70,7 @@
 
         <section>
               <div class="project">
-                <img src="/images/Gallery/JD_AMajomMamaja.jpg" alt="A majom mamája">
+                <img src="./images/Gallery/JD_AMajomMamaja.jpg" alt="A majom mamája">
                 <div class="desc">
                     <h3>A majom mamája</h3>
                     <p>
