--- a/html-feladatok-bemutatkozo/about.html
+++ b/html-feladatok-bemutatkozo/about.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
     <title>About</title>
 </head>
 
 <body>
     <header>
-        <img class="header" src="/images/HP-Banner.png" alt="JULIA DONALDSON">
+        <img class="header" src="./images/HP-Banner.png" alt="JULIA DONALDSON">
     </header>
     
     <nav>
@@ -33,7 +33,7 @@
 
     <main>
         <section>
-            <img src="/images/julia-donaldson-large-image.jpg" alt="Julia Donaldson" width="40%">
+            <img src="./images/julia-donaldson-large-image.jpg" alt="Julia Donaldson" width="40%">
         </section>
 
         <section>
