Optional task added

--- a/css-feladatok-admin/index.html
+++ b/css-feladatok-admin/index.html
@@ -26,12 +26,12 @@
         <aside>
             <nav class="main__nav">
                 <ul class="nav__ul">
-                    <li>CORE</li>
+                    <li class="menu__title">CORE</li>
                     <li>
                         <i class="fa fa-tachometer" aria-hidden="true"></i>
                         <a class="menu__link" href="">Dashboard</a>
                     </li>
-                    <li>INTERFACE</li>
+                    <li class="menu__title">INTERFACE</li>
                     <li>
                         <i class="fa fa-windows" aria-hidden="true"></i>
                         <a class="menu__link" href="">
@@ -46,7 +46,7 @@
                             <i class="fa fa-angle-right" aria-hidden="true"></i>
                         </a>
                     </li>
-                    <li>ADDONS</li>
+                    <li class="menu__title">ADDONS</li>
                     <li>
                         <i class="fa fa-area-chart" aria-hidden="true"></i>
                         <a class="menu__link" href="">Charts</a>
