--- a/js-1-feladatok-modal/index.html
+++ b/js-1-feladatok-modal/index.html
@@ -12,7 +12,7 @@
 <body>
     <button id="myButton" class="button">Click me!</button>
 
-    <div id="myModal" class="modal">
+    <div id="myModal" class="modal show">
         <div class="modal-content">
             <button class="button close">&times;</button>
             <header class="modal-header">CSSSCRIPT.com</header>
@@ -40,16 +40,16 @@
         const closeBtn = document.getElementsByClassName("close")[0];
 
         btn.onclick = function () {
-            modal.style.display = "block";
+            modal.classList.add('show');
         }
-
+        
         closeBtn.onclick = function () {
-            modal.style.display = "none";
+            modal.classList.remove('show');
         }
-
+        
         window.onclick = function (event) {
             if (event.target == modal) {
-                modal.style.display = "none";
+                modal.classList.remove('show');
             }
         }
     </script>
