--- a/js-1-feladatok-tictactoe/index.html
+++ b/js-1-feladatok-tictactoe/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>TicTacToe</title>
 </head>
 <body>
     <header>
@@ -32,7 +32,7 @@
         </div>
 
         <div>
-            <button id="start" type="button">START</button>
+            <button id="start" type="button">New Game</button>
         </div>
     </main>
 
